<resources>
    <string name="app_name">ThreadWatch</string>
    <string name="menu_sort">Sort By</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add">Add</string>
    <string name="menu_notify">Notify</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="action_close">Close</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <string name="add_thread_dialog_title">Add Thread</string>
    <string name="add_thread_dialog_input_hint">Paste a thread url</string>
    <string name="add_thread_message">Added %1$s</string>
    <string name="add_thread_track_reply">Added %1$s and tracking reply no. %2$s</string>

    <string name="no_threads_message">
        You aren\'t watching any threads. Add some!
        \n\nOpen a 4chan thread in your favorite browser and use the sharing option.
    </string>
    <string name="refresh_error">Unable to refresh threads. Check network connection.</string>
    <string name="no_thread_data"> </string>
    <string name="refresh_for_thread_data">Refresh to get thread data</string>
    <string name="invalid_thread_url">Not a valid thread url</string>
    <string name="duplicate_thread">Thread is already being watched</string>
    <string name="reply_tracked">Reply no. %1$s is now being tracked!</string>
    <string name="reply_already_tracked">Reply already tracked</string>
    <string name="reply_remove_title">Stop Tracking Reply</string>
    <string name="reply_remove_confirm">Are you sure you want to stop tracking %1s?</string>
    <string name="reply_add_hint">Paste reply no. Ex: 123456</string>
    <string name="reply_add_button">Track</string>
    <string name="reply_refresh_needed">Refresh to get data.</string>
    <string name="reply_not_found">Post not found or was deleted!</string>

    <string name="thread_info_dialog_title">Thread Info</string>
    <string name="thread_replies_dialog_title">Tracked Replies</string>
    <string name="thread_replies_empty">There are no replies being tracked.</string>

    <string name="thread_menu_info">Info</string>
    <string name="thread_menu_disabled">Thread refresh: Disabled</string>
    <string name="thread_menu_enabled">Thread refresh: Enabled</string>
    <string name="thread_menu_notify_you_disabled">Only notify on (You): Disabled</string>
    <string name="thread_menu_notify_you_enabled">Only notify on (You): Enabled</string>
    <string name="thread_menu_mark_read">Mark as Read</string>
    <string name="thread_menu_delete">Delete</string>
    <string name="thread_menu_deleted">Deleted</string>
    <string name="thread_menu_undo">Undo</string>
    <string name="thread_menu_replies">Replies</string>

    <string name="sort_menu_title">Title</string>
    <string name="sort_menu_board">Board</string>
    <string name="sort_menu_date">Creation Date</string>
    <string name="sort_menu_bump_date">Last Reply</string>
    <string name="sort_menu_add_date">Date Added</string>
    <string name="sort_menu_ascend">Ascending ▲</string>
    <string name="sort_menu_descend">Descending ▼</string>

    <string name="notification_title">New replies!</string>
    <string name="notification_content">New posts in %1d thread(s)</string>
    <string name="notification_title_last_page">Last Page Warning</string>
    <string name="notification_title_last_page_content">Thread(s) are on the last page!</string>

    <!-- Settings -->

    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_refresh">Refresh</string>
    <string name="pref_category_backup">Backup</string>
    <string name="pref_refresh_rate">Refresh Rate</string>
    <string-array name="pref_refresh_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>4 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_refresh_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>240</item>
        <item>-1</item>
    </string-array>

    <string name="pref_category_view">View</string>
    <string name="pref_category_show_thumbnails">Show OP Thumbnails</string>
    <string name="pref_category_notify_on_last_page">Last Page Warning</string>
    <string name="pref_category_notify_on_last_page_details">Notify if a thread reaches the last page on a board.</string>

    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_notify_vibrate">Vibrate</string>
    <string name="pref_notify_vibrate_disabled">Your device cannot vibrate!</string>
    <string name="pref_notify_vibrate_sysmanaged">
        Manage notification vibration in the Android notification settings!
    </string>
    <string name="pref_notify_settings">Open Notification Settings</string>

    <string name="pref_backup_import">Import</string>
    <string name="pref_backup_export">Export</string>
    <string name="pref_backup_import_summary">Import list of threads via a backup file (&lt;filename&gt;.json).</string>
    <string name="pref_backup_export_summary">Export the list of threads to a backup file.</string>
    <string name="pref_backup_import_confirm_title">Restore From Backup</string>
    <string name="pref_backup_import_confirm">
        File OK! Are you sure you want to import this backup?
        Your existing list of threads will be overwritten.
    </string>
    <string name="pref_backup_import_success">Backup file restore OK!</string>
    <string name="pref_backup_import_fail">There\'s something wrong with the backup file, brah.</string>
    <string name="pref_backup_fail_toast">Couldn\'t import/export backup file!</string>
    <string name="pref_backup_export_ok_toast">Export backup file OK!</string>
    <string name="pref_backup_export_fail_toast">Export backup file failed!</string>
    <string name="pref_backup_export_disabled">You don\'t have any watched threads to export.</string>

    <string name="pref_category_reset">Reset</string>
    <string name="pref_reset_clear">Clear</string>
    <string name="pref_reset_clear_summary">Clear out all threads in the list.</string>
    <string name="pref_reset_clear_confirm_title">Clear All Threads</string>
    <string name="pref_reset_clear_confirm">
        Are you sure you want to clear out all the threads in the list?
        This cannot be undone unless you have a backup!
    </string>
    <string name="pref_reset_clear_disabled">You don\'t have any watched threads to clear.</string>
    <string name="pref_reset_clear_success">Watched threads cleared!</string>

    <string name="notification_channel_name_updated_thread">Thread Updated</string>
    <string name="notification_channel_desc_updated_thread">New posts in a thread</string>

    <string name="minutes_label">%1d minute(s)</string>
    <string name="hours_label">%1d hour(s)</string>
    <string name="days_label">%1d day(s)</string>

    <string name="info_added">Added %1s ago on:\n%2s</string>
    <string name="info_posted">Posted %1s ago on:\n%2s</string>
    <string name="info_latest">Latest %1s ago on:\n%2s</string>
    <string name="info_stats">Replies: %1d | Images: %2d</string>

    <string name="last_page_warning">[LAST PAGE WARNING!]</string>
    <string name="last_page_warning_indicator">[ ! ]</string>

    <string name="help_summary">
        Add new threads by sharing a link (e.g. https://boards.4channel.org/5/thread/123456) to ThreadWatch.
        You can use your favorite browser\'s share feature while viewing a thread.
        \n\nLong-press a thread in the list for options to disable, view stats, delete, etc.
        \n\nTap the bell icon to toggle showing notifications.
        ThreadWatch will continue to refresh as long the refresh rate is not \"Never\".
        Swipe down on the list to refresh immediately.
        \n\nLast Page Warning: This will display if a thread will be deleted or archived soon.
        \n\nI\'d just like to interject, but this will always be free and open source software.
    </string>

    <string name="help_github">View on GitHub</string>
</resources>
