<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_refresh"
        android:key="pref_main_settings">

        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <ListPreference
            android:defaultValue="5"
            android:entries="@array/pref_refresh_titles"
            android:entryValues="@array/pref_refresh_values"
            android:key="pref_refresh_rate"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_refresh_rate" />

        <SwitchPreference
            android:key="pref_notify_vibrate"
            android:title="@string/pref_notify_vibrate"
            android:checked="true" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <!--<RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />-->

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!--<SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />-->
    </PreferenceCategory>
</PreferenceScreen>
